Add additional effects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </head>
     <body>
     </body>
-        <span id="iptemp"></span>
+        <div id="jumpscare">
+            <img src="img/ltg⚡⚡.gif">
+        </div>
         <div id="contents">
             
         </div>
