--- a/pandziak/index.html
+++ b/pandziak/index.html
@@ -10,6 +10,7 @@
 
         <div id="wyszukiwanie">
             <input type="text" id="wyszukiwarka" placeholder="Imię i nazwisko">
+            <button id="wyszukaj">Wyszukaj</button>
             <button id="random">Random</button>
             <div id="rezultaty"></div>
         </div>
